# system-f

./: LICENSE  README.md  stack.yaml  system-f.cabal  typed-lambda-calculus.cabal
app/: Main.hs
src/: AST.hs  Evaluator.hs  Fresh.hs  LamFile.hs  Parser.hs  ToCore.hs  TyCheck.hs  Unique.hs  Variables.hs
test/: Spec.hs
