name:                typed-lambda-calculus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lehmacdj/typed-lambda-calculus#readme
license:             BSD3
license-file:        LICENSE
author:              Devin Lehmacher
maintainer:          lehmacdj@gmail.com
copyright:           Copyright: (c) 2017 Devin Lehmacher
category:            Spare Time
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       AST,
                       Parser,
                       TyCheck
  build-depends:       base >= 4.7 && < 5,
                       parsec, containers, mtl, transformers, lens
  default-language:    Haskell2010

executable typed-lambda-calculus-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , typed-lambda-calculus
  default-language:    Haskell2010

test-suite typed-lambda-calculus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , typed-lambda-calculus
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehmacdj/typed-lambda-calculus
